--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ room = "2.6.1"
 ksp = "1.9.10-1.0.13"
 coroutine = "1.7.3"
 koin = "3.5.6"
+ktlint = "12.1.0"
 
 
 
@@ -78,4 +79,5 @@ koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = 
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
 
