--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,15 +20,20 @@ coroutine = "1.7.3"
 koin = "3.5.6"
 ktlint = "12.1.0"
 
-
-
 retrofit = "2.9.0"
 okhttp = "4.12.0"
+
 firebaseCrashlytics = "19.0.0"
 gradle = "8.1.4"
 googleServices = "4.4.1"
 firebaseCrashlyticsGradle = "2.9.9"
 firebaseAuth = "22.3.1"
+
+#unit test
+mockk = "1.13.10"
+coroutine-test = "1.7.2"
+turbine = "1.0.0"
+core-testing = "2.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -66,6 +71,8 @@ coroutine-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutine
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 retrofit-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
 okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
+
+#firebase
 firebase-crashlytics = { group = "com.google.firebase", name = "firebase-crashlytics", version.ref = "firebaseCrashlytics" }
 gradle = { group = "com.android.tools.build", name = "gradle", version.ref = "gradle" }
 google-services = { group = "com.google.gms", name = "google-services", version.ref = "googleServices" }
@@ -74,6 +81,16 @@ firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version
 
 # Koin
 koin-android = { group = "io.insert-koin", name = "koin-android", version.ref = "koin" }
+
+# Unit Testing
+mockk-android = { group = "io.mockk", name = "mockk-android", version.ref = "mockk" }
+mockk-agent = { group = "io.mockk", name = "mockk", version.ref = "mockk" }
+coroutine-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutine-test" }
+turbine = { group = "app.cash.turbine", name = "turbine", version.ref = "turbine" }
+core-testing = { group = "androidx.arch.core", name = "core-testing", version.ref = "core-testing" }
+
+
+
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
